src/test/ui/error-codes/E0432.stderr
error[E0432]: unresolved import `something`
  --> $DIR/E0432.rs:11:5
   |
11 | use something::Foo; //~ ERROR E0432
   |     ^^^^^^^^^ Maybe a missing `extern crate something;`?

error: aborting due to previous error

