src/test/ui/error-codes/E0432.rs
use something::Foo; //~ ERROR E0432

fn main () {
}
